css: fix thread button having wrong size

--- a/css/shape.css
+++ b/css/shape.css
@@ -7,6 +7,11 @@
     font-weight: bold;
 }
 
+svg.GfYBMd.Kol3Vd.V3Pk2 {
+    font-size: 0.5em;
+    height: 3em;
+}
+
 /* Reduce left and right margins in the chat area */
 .BEjUKc .cFc9ae {
     margin-left: 10px;
